<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_new_picture"
            android:id="@+id/textView"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/teamid02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="SetTeamIcon"
                android:layout_weight="1"
                android:contentDescription="@string/beer"
                android:src="@drawable/beerglass" />

            <ImageView
                android:id="@+id/teamid03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SetTeamIcon"
                android:layout_weight="1"
                android:contentDescription="@string/cherry"
                android:src="@drawable/cherry" />

            <ImageView
                android:id="@+id/teamid05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/cookies"
                android:onClick="SetTeamIcon"
                android:src="@drawable/cookies" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SecondRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/teamid00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="SetTeamIcon"
                android:contentDescription="@string/logo1"
                android:src="@drawable/banana" />

            <ImageView
                android:id="@+id/teamid01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="SetTeamIcon"
                android:contentDescription="@string/can"
                android:src="@drawable/beercan" />

            <ImageView
                android:id="@+id/teamid04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="SetTeamIcon"
                android:contentDescription="@string/coconut"
                app:srcCompat="@drawable/coconutcocktail" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/load_from_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>